# SeaBattleConsole

./: CMakeLists.txt  Readme.md  input.txt  main.cpp  map.txt
src/: bot.hpp  cell.hpp  celltype.hpp  controlentity.hpp  map.cpp  map.hpp  player.hpp  ship.cpp  ship.hpp  shipinfo.hpp  shippart.cpp  shippart.hpp
